src/test/ui/issues/issue-20005.stderr
error[E0277]: the size for values of type `Self` cannot be known at compilation time
  --> $DIR/issue-20005.rs:10:49
   |
LL | trait From<Src> {
   |            --- required by this bound in `From`
...
LL |     ) -> <Dst as From<Self>>::Result where Dst: From<Self> {
   |                                                 ^^^^^^^^^^- help: consider further restricting `Self`: `, Self: std::marker::Sized`
   |                                                 |
   |                                                 doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `Self`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
